# slimvv

./: .gitignore  CMakeLists.txt  README.md  readme
benches/: vv0_bench.cpp  vv1_bench.cpp  vv3_bench.cpp  vv4_bench.cpp
include/: vector.hpp  vv0.hpp  vv1.hpp  vv2.hpp  vv3.hpp  vv4.hpp
scripts/: build.sh  run.sh  test.sh
tests/: vv1_test.cpp  vv2_test.cpp  vv3_test.cpp
